--- a/app/assets/stylesheets/feature.scss
+++ b/app/assets/stylesheets/feature.scss
@@ -6,7 +6,7 @@
   font-size: 12px;
   border: 1px solid #b8b8b8;
   border-radius: 8px;
-  margin: 0 auto;
+  margin: 0 auto 100px auto;
   .feature {
     display: inline-block;
     float: left;
