--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -7,7 +7,6 @@ footer {
   padding: 30px;
   text-transform: uppercase;
   letter-spacing: 1px;
-  margin-top: 100px;
   width: 100%;
   a {
     text-decoration: none;
