--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,7 +1,8 @@
 header {
   height: 100px;
   width: 800px;
-  margin: 50px auto;
+  margin: 0 auto;
+  padding-top: 50px;
   font-size: 18px;
   img {
     height: 85%;
