--- a/app/assets/stylesheets/loading.scss
+++ b/app/assets/stylesheets/loading.scss
@@ -6,18 +6,15 @@
     position: relative;
     margin: 50px auto;
     width: 300px;
-    height: 300px;
     h3 {
-      position: absolute;
-      bottom: 10px;
       color: #fff;
       text-transform: uppercase;
       display: block;
-      margin: 100px;
+      margin-top: 10px;
+      text-align: center;
       font-size: 18px;
     }
     img {
-      position: absolute;
       width: 250px;
       left: 0px;
     }
@@ -26,6 +23,7 @@
       -webkit-animation-duration: 1.5s;
       -webkit-animation-iteration-count: infinite;
       -webkit-animation-timing-function: linear;
+      position: absolute;
       top: 47px;
       left: 2px;
       &.wheel1 {
