--- a/app/assets/stylesheets/textarea.scss
+++ b/app/assets/stylesheets/textarea.scss
@@ -59,6 +59,7 @@
 }
 
 .results {
+  margin-bottom: 100px;
   .actionButtons {
     display: inline-block;
     float: right;
